--- a/site.yml
+++ b/site.yml
@@ -44,6 +44,10 @@
         - mutt
         - macvim
         - vim
+        - bup
+        - byobu
+        - checkbashisms
+        - wget
 
     - command: creates=/usr/local/Cellar/sshpass/1.05/bin/sshpass brew install https://raw.github.com/eugeneoden/homebrew/eca9de1/Library/Formula/sshpass.rb
 
