--- a/site.yml
+++ b/site.yml
@@ -6,6 +6,17 @@
     home: /Users/jtang
 
   tasks:
+    - command: creates=/usr/local/Library/Taps/{{item.tap}}-{{item.flavour}}/README.md brew tap {{item.tap}}/{{item.flavour}}
+      with_items:
+        - { tap: homebrew, flavour: apache }
+        - { tap: homebrew, flavour: dupes }
+        - { tap: homebrew, flavour: games }
+        - { tap: homebrew, flavour: python }
+        - { tap: homebrew, flavour: science }
+        - { tap: homebrew, flavour: versions}
+        - { tap: phinze, flavour: cask }
+
+
     - homebrew: name={{item}} state=present
       with_items:
         - ansible
@@ -48,6 +59,8 @@
         - byobu
         - checkbashisms
         - wget
+        - openssh
+        - brew-cask
 
     - command: creates=/usr/local/Cellar/sshpass/1.05/bin/sshpass brew install https://raw.github.com/eugeneoden/homebrew/eca9de1/Library/Formula/sshpass.rb
 
