--- a/site.yml
+++ b/site.yml
@@ -14,6 +14,7 @@
         - { tap: homebrew, flavour: python }
         - { tap: homebrew, flavour: science }
         - { tap: homebrew, flavour: versions}
+        - { tap: homebrew, flavour: headonly }
         - { tap: phinze, flavour: cask }
 
 
@@ -46,7 +47,7 @@
         - asciidoc
         - source-highlight
         - fop
-        - gsl
+        - gsl114
         - dos2unix
         - par2
         - connect
@@ -61,6 +62,13 @@
         - wget
         - openssh
         - brew-cask
+        - binutils
+        - socat
+        - rsync
+        - bbcp
+        - gnuplot
+        - kindlegen
+        - wkhtmltopdf
 
     - command: creates=/usr/local/Cellar/sshpass/1.05/bin/sshpass brew install https://raw.github.com/eugeneoden/homebrew/eca9de1/Library/Formula/sshpass.rb
 
