--- a/site.yml
+++ b/site.yml
@@ -16,6 +16,7 @@
         - homebrew/python
         - homebrew/science
         - homebrew/versions
+        - phinze/cask
 
     - homebrew: name={{item}} state=present
       with_items:
