ansible for dri related tasks

--- a/site.yml
+++ b/site.yml
@@ -89,6 +89,7 @@
     # dri related
     - homebrew: name={{item}} state=present
       with_items:
+        - ansible
         - coreutils
         - libtool
         - libksba
