install a few more commonly used apps

--- a/site.yml
+++ b/site.yml
@@ -151,3 +151,7 @@
         - shiftit
         - xquartz
         - pandoc
+        - google-chrome
+        - firefox
+        - opera
+        - vagrant
