--- a/site.yml
+++ b/site.yml
@@ -118,10 +118,10 @@
         - imagemagick
         - node
 
-    - command: creates=/usr/local/lib/libxml2.a brew link libxml2 --force
-    - command: creates=/usr/local/lib/libxslt.a brew link libxslt --force
-    - command: creates=/usr/local/bin/msgfmt brew link gettext --force
-    - command: creates=/usr/local/lib/libreadline.a brew link readline --force
+#    - command: creates=/usr/local/lib/libxml2.a brew link libxml2 --force
+#    - command: creates=/usr/local/lib/libxslt.a brew link libxslt --force
+#    - command: creates=/usr/local/bin/msgfmt brew link gettext --force
+#    - command: creates=/usr/local/lib/libreadline.a brew link readline --force
 
     - file: src=/usr/local/opt/{{ item }}/homebrew.mxcl.{{ item }}.plist path=~/Library/LaunchAgents/homebrew.mxcl.{{ item }}.plist state=link force=yes
       with_items:
