tmpreaper for cleaning up automatically

--- a/site.yml
+++ b/site.yml
@@ -72,6 +72,7 @@
         - kindlegen
         - wkhtmltopdf
         - xapian
+        - tmpreaper
 
     - command: creates=/usr/local/Cellar/sshpass/1.05/bin/sshpass brew install https://raw.github.com/eugeneoden/homebrew/eca9de1/Library/Formula/sshpass.rb
 
