--- a/site.yml
+++ b/site.yml
@@ -73,6 +73,7 @@
         - wkhtmltopdf
         - xapian
         - tmpreaper
+        - ipcalc
 
     - command: creates=/usr/local/Cellar/sshpass/1.05/bin/sshpass brew install https://raw.github.com/eugeneoden/homebrew/eca9de1/Library/Formula/sshpass.rb
 
