--- a/site.yml
+++ b/site.yml
@@ -76,6 +76,7 @@
         - ipcalc
         - poppler
         - stgit
+        - deheader
 
     - command: creates=/usr/local/Cellar/sshpass/1.05/bin/sshpass brew install https://raw.github.com/eugeneoden/homebrew/eca9de1/Library/Formula/sshpass.rb
 
