--- a/site.yml
+++ b/site.yml
@@ -64,7 +64,7 @@
         - wget
         - openssh
         - brew-cask
-        - binutils
+        #- binutils
         - socat
         - rsync
         - bbcp
