--- a/site.yml
+++ b/site.yml
@@ -19,6 +19,7 @@
         - phinze/cask
         - jcftang/jcftang
         - caskroom/fonts
+        - robotastic/homebrew-hackrf
 
     - homebrew: name={{item}} state=present
       with_items:
